[gd_scene load_steps=12 format=3 uid="uid://dq2p5y4no30tf"]

[ext_resource type="Script" path="res://scripts/main_character.gd" id="1_klnku"]
[ext_resource type="Texture2D" uid="uid://b4a3gkhbvfrif" path="res://sprites/ship-Sheet.png" id="2_8oifs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wxo5i"]
atlas = ExtResource("2_8oifs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_snytw"]
atlas = ExtResource("2_8oifs")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7vv8"]
atlas = ExtResource("2_8oifs")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjdxl"]
atlas = ExtResource("2_8oifs")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpa3l"]
atlas = ExtResource("2_8oifs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_568w4"]
atlas = ExtResource("2_8oifs")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bwo8"]
atlas = ExtResource("2_8oifs")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q75n2"]
atlas = ExtResource("2_8oifs")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_68dvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxo5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snytw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7vv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjdxl")
}],
"loop": true,
"name": &"ship",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpa3l")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_568w4")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bwo8")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q75n2")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"ship_invulnerability",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_klnku")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_68dvq")
animation = &"ship_invulnerability"
autoplay = "ship"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(12.065, 0)
gizmo_extents = 0.0

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-8, 8, 8, 0, -8, -8, -3, 0)

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
